--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 22
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "de.ludetis.android.malkasten"
         minSdkVersion 14
-        targetSdkVersion 14
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 22
+        versionCode 4
+        versionName "1.5"
     }
     signingConfigs {
         releaseConfig {
@@ -21,8 +21,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+          //  runProguard false
+          //  proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.releaseConfig
         }
     }
@@ -30,5 +30,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v4:22.0.0'
 }
