--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "de.ludetis.android.malkasten"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 4
-        versionName "1.5"
+        versionCode 152
+        versionName "1.5.2"
     }
     signingConfigs {
         releaseConfig {
@@ -21,6 +21,7 @@ android {
     }
     buildTypes {
         release {
+            //debuggable true
             //  runProguard false
             //  proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.releaseConfig
