--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 33
+
 
     defaultConfig {
         applicationId "de.ludetis.android.malkasten"
         minSdkVersion 14
-        targetSdkVersion 22
-        versionCode 157
-        versionName "1.5.7"
+        targetSdkVersion 33
+        versionCode 167
+        versionName "1.6.7"
     }
     signingConfigs {
         releaseConfig {
@@ -27,9 +27,14 @@ android {
             signingConfig signingConfigs.releaseConfig
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:22.2.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'io.github.pilgr:paperdb:2.7.2'
 }
